# shimexe

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  build-icon.ps1  build.rs  codecov.yml  deny.toml  flake.nix  release-please-config.json  release-plz.toml
.github/: RELEASE_TEMPLATE.md  release-please-config.json
.github/workflows/: ci.yml  housekeeping.yml  package-publish.yml  release-assets.yml  release-please.yml  release-plz.yml  release.yml  security-audit.yml  update-packages.yml
@pkg/: README.md
@pkg/chocolatey/: shimexe.nuspec.template
@pkg/chocolatey/tools/: chocolateyinstall.ps1.template
@pkg/scoop/: shimexe.json
@pkg/scripts/: update-package-managers.ps1  update-package-managers.sh
crates/shimexe-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/shimexe-cli/src/: main.rs  shim_manager.rs
crates/shimexe-cli/src/commands/: add.rs  auto_update.rs  init.rs  list.rs  mod.rs  remove.rs  update.rs  update_check.rs  validate.rs
crates/shimexe-core/: CHANGELOG.md  Cargo.toml  README.md
crates/shimexe-core/benches/: performance.rs
crates/shimexe-core/crates/shimexe-core/: CHANGELOG.md
crates/shimexe-core/src/: archive.rs  archive_tests.rs  config.rs  downloader.rs  error.rs  lib.rs  manager.rs  runner.rs  template.rs  traits.rs  updater.rs  utils.rs
crates/shimexe-core/tests/: archive_helpers.rs  config_cache.rs  config_core.rs  config_exec_archive_first.rs  config_exec_url.rs  config_exec_url_positive.rs  config_executable_path.rs  config_expand_error.rs  downloader_edges.rs  downloader_exe_name_more.rs  downloader_parsing.rs  manager_list_invalid_exec.rs  manager_listing.rs  manager_validate_negative.rs  performance_integration.rs  runner_validate.rs  template_args_combo.rs  template_args_default.rs  template_file_exists.rs  template_file_exists_mixed.rs  template_if_negative.rs  template_more.rs  template_platforms.rs  utils_env.rs  utils_merge_env.rs
docs/: NIX.md  PACKAGE_MANAGERS.md  RELEASE_SETUP.md  api-guide.md  icon-design.md  release-please-setup.md  release-workflow-architecture.md  shim-configuration.md  vx-integration-analysis.md  vx-integration-improved.rs
examples/: vx_integration_simple.rs
pkg/: README.md
pkg/choco/: shimexe.nuspec
pkg/choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
pkg/chocolatey/tools/: chocolateyuninstall.ps1.template
pkg/homebrew/: shimexe.rb
pkg/scoop/: shimexe.json
pkg/scripts/: update-package-managers.ps1  update-package-managers.sh
scripts/: install.ps1  install.sh  publish-chocolatey.ps1  publish-packages-enhanced.ps1  publish-packages.ps1  publish-packages.sh  run-benchmarks.ps1  update-package-managers.ps1  update-package-managers.sh  update-package-versions.ps1  update-package-versions.sh
src/: main.rs  path_manager.rs  shim_manager.rs
src/commands/: add.rs  auto_update.rs  init.rs  remove.rs  run.rs  update.rs  update_check.rs  validate.rs
tests/: add_command_tests.rs  archive_tests.rs  config_tests.rs  downloader_tests.rs  env_tests.rs  error_tests.rs  init_command_tests.rs  manager_tests.rs  runner_tests.rs  template_tests.rs  traits_tests.rs  updater_tests.rs  utils_tests.rs
