[package]
name = "shimexe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A modern, cross-platform executable shim manager with environment variable expansion and TOML configuration support"

[[bin]]
name = "shimexe"
path = "src/main.rs"

[dependencies]
shimexe-core = { version = "0.1.2", path = "../shimexe-core" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
winres = "0.1"
