[package]
name = "shimexe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for shimexe - executable shim manager"

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
shellexpand.workspace = true
dirs.workspace = true
which.workspace = true
tracing.workspace = true
regex = "1.10"
turbo-cdn = { version = "0.2.1", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
zip = "4.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
serde_json = "1.0"

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.6", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false
